# Mental-Health-Dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  generate_swagger.py  openapi.yaml  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/api/: deps.py
backend/src/app/api/endpoints/: auth.py  journal.py  questionnaires.py  users.py
backend/src/app/core/: auth.py  config.py  database.py  dependencies.py  settings.py
backend/src/app/models/: __init__.py  base.py  database.py  journal.py  password_reset.py  questionnaire.py  schemas.py  user.py
backend/src/app/repositories/: db.py
backend/src/app/repository/: journal.py  questionnaire.py  user.py
backend/src/app/routes/: auth.py  journal.py  journals.py  questionnaires.py  users.py
backend/src/app/schemas/: __init__.py  journal.py  password_reset.py  questionnaire.py  token.py  user.py
backend/src/app/services/: email_service.py  google_oauth_service.py  journal_service.py  password_reset_service.py  questionnaire_service.py  sentiment.py  user_service.py
backend/src/routes/: journal.py
backend/tests/: conftest.py  test_auth.py  test_endpoints.py  test_google_oauth.py  test_journal.py  test_models.py  test_questionnaire_crud.py  test_questionnaire_endpoints.py  test_user_crud.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AppHeader.jsx  GoogleButton.jsx  GradientStrip.jsx  (+2 more)
src/app/: main.py
tests/: test_models.py
(+30 files in other folders)
